k8s/flux/apps/watsup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watsup
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: watsup
spec:
  type: ClusterIP
  selector:
    app: watsup
  ports:
    - name: http
      port: 80
      targetPort: 3000
